fix ui: remove horizontal overflow

--- a/src/style/categories.css
+++ b/src/style/categories.css
@@ -70,6 +70,7 @@
         grid-template-columns: 50% 50%;
         height: 400px;
         gap: 20px;
+        max-width: 95%;
 
         img {
             height: 350px;
